--- a/style.css
+++ b/style.css
@@ -22,10 +22,17 @@ body {
 }
 #guess-rows {
   width: 500px;
-  height: 100px;
-  background-color: antiquewhite;
+  background-color: rgb(255, 227, 209);
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.guess-attempts {
+  width: 500px;
+  height: 100px;
+  background-color: rgb(209, 255, 244);
+  display: flex;
   justify-content: space-around;
   align-items: center;
 }
