--- a/style.css
+++ b/style.css
@@ -3,15 +3,13 @@
 * {
   --board-color: #de8f65;
   --hole-color: #5c3018;
-
 }
 body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: "Candal", sans-serif;
-
+  font-family: 'Candal', sans-serif;
 }
 .top {
   width: 400px;
@@ -47,7 +45,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  border-top:  1px solid rgba(0, 0, 0, 0.2);
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 #code {
   width: 200px;
@@ -59,7 +57,7 @@ body {
   text-align: center;
   color: white;
 }
-#code>div {
+#code > div {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -81,7 +79,7 @@ body {
   border: 1px solid var(--board-color);
 }
 #color-set > div:hover {
-  border: 1px solid var(--hole-color) ;
+  border: 1px solid var(--hole-color);
   border-radius: 20px;
 }
 .color-set {
@@ -104,7 +102,7 @@ body {
   justify-content: space-around;
   align-items: center;
 }
-.main-guess-row{
+.main-guess-row {
   width: 200px;
   height: 80px;
   margin: 5px;
@@ -122,14 +120,18 @@ body {
 .hole {
   width: 28px;
   height: 28px;
-  background: radial-gradient(circle at 20px 20px,  var(--hole-color), rgb(0, 0, 0));
+  background: radial-gradient(
+    circle at 20px 20px,
+    var(--hole-color),
+    rgb(0, 0, 0)
+  );
   border-radius: 20px;
 }
 button {
   border: 1px solid var(--hole-color);
   background-color: var(--board-color);
   color: var(--hole-color);
-  font-family: "Candal", sans-serif;
+  font-family: 'Candal', sans-serif;
 }
 button:hover {
   border-color: #b5b5b5;
@@ -137,6 +139,10 @@ button:hover {
 #check {
   padding: 5px 10px 5px 10px;
   width: 80px;
+}
+button:disabled {
+  color: #494949;
+  border-color: #494949;
 }
 #start-button {
   padding: 10px 40px 10px 40px;
@@ -154,7 +160,11 @@ button:hover {
   margin: 5px;
   width: 15px;
   height: 15px;
-  background: radial-gradient(circle at 12px 12px,  var(--hole-color), rgb(0, 0, 0));
+  background: radial-gradient(
+    circle at 12px 12px,
+    var(--hole-color),
+    rgb(0, 0, 0)
+  );
   border-radius: 8px;
 }
 
