--- a/style.css
+++ b/style.css
@@ -219,3 +219,9 @@ div[disabled]
   pointer-events: none; 
   opacity: 0.7;
 }
+
+footer {
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 50px;
+  font-size: 12px;
+}
